# rag-llmops

./: .gitignore
rag/: README.md  pyproject.toml
rag/.streamlit/: config.toml
rag/src/rag/: docker-compose.yaml
rag/src/rag/backend/: README.md  agents.py  api.py  constants.py  data_models.py  middleware.py  pyproject.toml
rag/src/rag/dockerfile/: README.md
rag/src/rag/explorations/: explore_knowledge_base.ipynb
rag/src/rag/frontend/: README.md  app.py
rag/src/rag/prompt_engineering/: README.md  __init__.py  register_prompts.py
rag/src/rag/setup/: README.md  ingestion.py  ingestion_test.py  pdfs_to_text.py
