[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ajmal Yazdani", email = "ajmal.yazdani@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "pypdf>=6.10.2",
]

[project.scripts]
rag = "rag:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
