[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ajmal Yazdani", email = "ajmal.yazdani@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["ipykernel>=7.2.0", "pypdf>=6.10.2", "cohere>=5.15.0", "python-dotenv>=1.0.0", "backend", "frontend"]

[tool.uv.sources]
backend = { workspace = true }
frontend = { workspace = true }

[tool.uv.workspace]
members = ["src/rag/frontend", "src/rag/backend"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"